# CTFx

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: python-publish.yml
ctfx/: __init__.py  cli.py  exceptions.py
ctfx/commands/: ai.py  api.py  awd.py  challenge.py  competition.py  config.py  interactive.py  platform.py  serve.py  setup.py  terminal.py  token.py  toolkit.py  webui.py
ctfx/managers/: ai.py  awd.py  config.py  scaffold.py  toolkit.py  workspace.py
ctfx/managers/platform/: base.py  ctfd.py
ctfx/server/: api.py  app.py  auth.py  mcp.py  mcp_server.py
ctfx/utils/: __init__.py  process.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Layout.tsx
frontend/src/lib/: api.ts  compContext.tsx
frontend/src/pages/: ChallengePage.tsx  CompetitionProfile.tsx  Competitions.tsx  Dashboard.tsx  FlagsPage.tsx  PlatformApiPage.tsx  Settings.tsx  SubmitPage.tsx  ToolkitPage.tsx
frontend/src/pages/awd/: AWDExploits.tsx  AWDHostMap.tsx  AWDOverview.tsx  AWDPatches.tsx
tests/: conftest.py  test_api.py  test_api_commands.py  test_auth.py  test_config.py  test_process.py  test_scaffold.py  test_toolkit.py  test_workspace.py
